--- a/client/src/components/gnb.module.scss
+++ b/client/src/components/gnb.module.scss
@@ -6,5 +6,13 @@ nav {
 
   ul {
     display: flex;
+
+    li {
+      a {
+        &.isActive {
+          font-weight: 500;
+        }
+      }
+    }
   }
 }
