--- a/client/src/styles/constants/_colors.scss
+++ b/client/src/styles/constants/_colors.scss
@@ -2,3 +2,17 @@ $POINT: #e33454;
 $SUB_POINT: #ed9aaa;
 
 $FONT: #2e2e58;
+
+$MAIN: #00d465;
+$GRAY: #414e61;
+$ORANGE: #ff7448;
+$YELLOW: #ffd643;
+
+$BLACK: #31363d;
+$GRAY5: #5a5e63;
+$GRAY8: #83868a;
+$GRAYC: #c1c3c5;
+$GRAYD: #d6d7d8;
+$GRAYE: #eaebec;
+$GRAYF: #f5f5f5;
+$WHITE: #f9f9f9;
